--- a/docs/_static/css/styles.css
+++ b/docs/_static/css/styles.css
@@ -16,9 +16,9 @@
    }
 }
 
-.wy-side-nav-search .wy-dropdown>a img.logo,.wy-side-nav-search>a img.logo {
+/* .wy-side-nav-search .wy-dropdown>a img.logo,.wy-side-nav-search>a img.logo {
    max-width: 40%;
-}
+} */
 
 .wy-side-nav-search>div.version {
    color: #d9d9d9;
