clean up doc format

--- a/docs/_static/css/styles.css
+++ b/docs/_static/css/styles.css
@@ -61,3 +61,11 @@ html.writer-html4 .rst-content dl:not(.docutils)>dt, html.writer-html5 .rst-cont
 .wy-menu-vertical a {
    color: #d9d9d9;
 }
+
+section h2 {
+   margin-top: 30px;
+}
+
+code .pre {
+   color: #008bfb;
+}
